--- a/header.html
+++ b/header.html
@@ -11,7 +11,7 @@
   <a href="./index.html">22.03/3.0061[J]</a>
   <a href="./index.html">Home</a>
   <a href="./2021/index.html">2021</a>
-  <a href="./about.html">About</a>
+<!--   <a href="./about.html">About</a> -->
 </div>
 
 </body>
