--- a/index.html
+++ b/index.html
@@ -28,12 +28,21 @@ Provides hands-on experiences in creativity, problem scoping, prototyping, syste
 
 ['Weekly update' demo page, annotated](./week-annotate/index.html) 
 
-#### Lectures
+#### Updates
 
 [Lecture 1, September 7, 2022](./lecture-1/index.html)
 
+[Photos, September 14, 2022](https://www.dropbox.com/sh/kzc3gyq60ti9o96/AAA0pQuzAY4Ktnn1XHZJ_FVSa?dl=0)
+
 ### Students 
 
+[Tyler Ea]()
+[Christine Hao]()
+[Anna Lillwitz]()
+[Brittany McHenry]()
+[Noah Moore]()
+[Xavier St. Hill]()
+[Catherine Tang]()
 
 </xmp>
 
