--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@ Provides hands-on experiences in creativity, problem scoping, prototyping, syste
 
 ### Students 
 
-[Tyler Ea]()
-[Christine Hao]()
-[Anna Lillwitz]()
-[Brittany McHenry]()
-[Noah Moore]()
-[Xavier St. Hill]()
-[Catherine Tang]()
+- [Tyler Ea]()
+- [Christine Hao]()
+- [Anna Lillwitz]()
+- [Brittany McHenry]()
+- [Noah Moore]()
+- [Xavier St. Hill]()
+- [Catherine Tang]()
 
 </xmp>
 
