--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@ Provides hands-on experiences in creativity, problem scoping, prototyping, syste
 
 #### Web development
 
-<!-- [GitHub & GH Pages](../../lab/website/github.html) 
+[GitHub & GH Pages](../../lab/website/github.html) 
 
-[HTML & CSS]('../../lab/website/htmlcss.html') -->
+<!-- [HTML & CSS]('../../lab/website/htmlcss.html') -->
 
 [Web development resources](./web.html)
 
