--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Provides hands-on experiences in creativity, problem scoping, prototyping, syste
 
 ### Students 
 
-- [Tyler Ea]()
+- [Tyler Ea](https://tyler-ea.github.io/tylerea_2203/index.html)
 - [Christine Hao]()
 - [Anna Lillwitz]()
 - [Brittany McHenry]()
