--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@ Provides hands-on experiences in creativity, problem scoping, prototyping, syste
 
 ['Weekly update' demo page, annotated](./week-annotate/index.html) 
 
+[Week 2 Page](./week-2/index.html)
+
 #### Updates
 
 [Lecture 1, September 7, 2022](./lecture-1/index.html)
