--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@ Provides hands-on experiences in creativity, problem scoping, prototyping, syste
 ### Students 
 
 - [Tyler Ea](https://tyler-ea.github.io/tylerea_2203/index.html)
-- [Christine Hao]()
-- [Anna Lillwitz]()
-- [Brittany McHenry]()
+- [Christine Hao](https://christinehao7.github.io/Christinehao-22-03/)
+- [Anna Lillwitz](https://annalillwitz.github.io/2203/)
+- [Brittany McHenry](https://bmchenry2.github.io/3.0061/index.html)
 - [Noah Moore]()
-- [Xavier St. Hill]()
-- [Catherine Tang]()
+- [Xavier St. Hill](https://sthillprince.github.io/2203/index.html)
+- [Catherine Tang](https://ct135.github.io/rapid-prototyping/simple-demo/index.html)
 
 </xmp>
 
