--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Provides hands-on experiences in creativity, problem scoping, prototyping, syste
 - [Christine Hao](https://christinehao7.github.io/Christinehao-22-03/)
 - [Anna Lillwitz](https://annalillwitz.github.io/2203/)
 - [Brittany McHenry](https://bmchenry2.github.io/3.0061/index.html)
-- [Noah Moore]()
+- [Noah Moore](https://nlmoore.github.io/22.03/index.html)
 - [Xavier St. Hill](https://sthillprince.github.io/2203/index.html)
 - [Catherine Tang](https://ct135.github.io/rapid-prototyping/simple-demo/index.html)
 
