--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@ Provides hands-on experiences in creativity, problem scoping, prototyping, syste
 
 [Photos, September 14, 2022](https://www.dropbox.com/sh/kzc3gyq60ti9o96/AAA0pQuzAY4Ktnn1XHZJ_FVSa?dl=0)
 
+[Pan-Tilt Device](https://www.thingiverse.com/thing:4917505)
+
 ### Students 
 
 - [Tyler Ea](https://tyler-ea.github.io/tylerea_2203/index.html)
