--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@ Provides hands-on experiences in creativity, problem scoping, prototyping, syste
 
 [Week 2 Page](./week-2/index.html)
 
+
+<!-- 
 #### Updates
 
 [Lecture 1, September 7, 2022](./lecture-1/index.html)
@@ -46,7 +48,7 @@ Provides hands-on experiences in creativity, problem scoping, prototyping, syste
 - [Brittany McHenry](https://bmchenry2.github.io/3.0061/index.html)
 - [Noah Moore](https://nlmoore.github.io/22.03/index.html)
 - [Xavier St. Hill](https://sthillprince.github.io/2203/index.html)
-- [Catherine Tang](https://ct135.github.io/rapid-prototyping/simple-demo/index.html)
+- [Catherine Tang](https://ct135.github.io/rapid-prototyping/simple-demo/index.html) -->
 
 </xmp>
 
