--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@ Provides hands-on experiences in creativity, problem scoping, prototyping, syste
 [Week 2 Page](./week-2/index.html)
 
 
+
+### Projects 
+
+[Robust Measurement](https://abbydulski.github.io/22.03-Work/)
+[Future Tipi Poles](https://lilianaaaaa.github.io/22.03_1/index.html)
 <!-- 
 #### Updates
 
